--- a/build.gradle
+++ b/build.gradle
@@ -25,8 +25,9 @@ repositories {
 
 dependencies {
     // Spring boot
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-validation:'
 
     // test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
